# mercenary-api

./: .gitignore  Dockerfile  Dockerfile.new  Dockerfile.v2  README.md  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml
app/: config.py  main.py
app/api/: __init__.py  agents.py  auth.py  bounties.py  wallet.py
app/core/: __init__.py  matcher.py
app/db/: __init__.py  connection.py
app/models/: __init__.py
app/services/: email.py  google_oauth.py
app/temporal/: __init__.py  client.py  workflows.py
app/worker/: __init__.py  worker.py
tests/: test_auth_e2e.py
