[project]
name = "mercenary-api"
version = "0.1.0"
description = "Backend API for mercs.tech"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.0.0",
    "resend>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
